--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "auto": "^11.1.1",
+    "picocolors": "^1.1.1",
     "prettier": "^3.2.0",
     "rimraf": "^3.0.2",
     "tsup": "^6.7.0",
