--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "webpack": "^5.99.9"
   },
   "peerDependencies": {
+    "storybook": "^9.0.0",
     "webpack": "^5.0.0"
   },
+  "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6",
   "publishConfig": {
     "access": "public"
   },
@@ -74,6 +76,5 @@
       "preact"
     ],
     "icon": "https://raw.githubusercontent.com/storybookjs/addon-styling/1e17a71614dde4337f402dd5f00d761991d1a9d8/.github/media/styling.svg"
-  },
-  "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
+  }
 }
