--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use Node.js 22.x
+      - name: Setup Node
         uses: actions/setup-node@v3
 
       - uses: pnpm/action-setup@v4
@@ -20,12 +20,10 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: |
-          pnpm build
+        run: pnpm build
 
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          pnpm release
+        run: pnpm release
