--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
-    "auto": "^11.3.0",
+    "auto": "11.1.1",
     "picocolors": "^1.1.0",
     "prettier": "^3.5.3",
     "storybook": "^10.0.0",
