Refactor tsconfig.json to update module target to es2015, remove allowJs and moduleDetection options, and clean up unused settings for improved TypeScript configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,20 +3,15 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "target": "esnext",
-    "allowJs": true,
     "resolveJsonModule": true,
-    "moduleDetection": "force",
     "moduleResolution": "bundler",
-    "module": "preserve",
+    "module": "es2015",
     "jsx": "react",
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-    "noImplicitAny": true,
     "lib": ["esnext", "dom", "dom.iterable"],
-    "baseUrl": ".",
     "rootDir": "."
   },
   "include": ["src/**/*", "tsup.config.ts"]
